# MobShield-Android

./: .editorconfig  .gitignore  README.md  build.gradle.kts  detekt.yml  gradle.properties  jitpack.yml  settings.gradle.kts
.github/workflows/: android-ci.yml
docs/detection/: android-debug.md  android-emulator.md  android-hooks.md  android-integrity.md  android-root.md
gradle/: libs.versions.toml
mobshield/: build.gradle.kts  build.gradle.kts.bak  consumer-rules.pro
mobshield-core/: build.gradle.kts
mobshield-core/src/androidTest/kotlin/io/mobshield/core/: NativeBridgeInstrumentedTest.kt
mobshield-core/src/main/cpp/: CMakeLists.txt  mobshield_buildinfo.h  mobshield_jni.cpp  mobshield_native.cpp
mobshield-core/src/main/kotlin/io/mobshield/core/: DetectionModule.kt  MobShield.kt  MobShieldConfig.kt  MobShieldListener.kt  MobShieldState.kt  ModuleRegistry.kt  Severity.kt  Signal.kt  SignalAggregator.kt  SignalTuning.kt  TerminationPolicy.kt  ThreatEvent.kt  ThreatThresholds.kt  ThreatType.kt
mobshield-core/src/main/kotlin/io/mobshield/core/internal/: MobShieldEngine.kt  NativeBridge.kt
mobshield-core/src/test/kotlin/io/mobshield/core/: MobShieldConfigTest.kt  MobShieldEngineIntegrationTest.kt  ModuleRegistryTest.kt  SignalAggregatorTest.kt
mobshield-detect-debugger/: build.gradle.kts
mobshield-detect-debugger/src/main/cpp/: CMakeLists.txt  debug_checks.h  debug_jni.cpp  native_debugger_timing.cpp  ptrace_self.cpp  tracerpid_check.cpp
mobshield-detect-debugger/src/main/kotlin/io/mobshield/detect/debugger/: AdbEnabledCheck.kt  AppDebuggable.kt  DebugDetectionModule.kt  DebugDetectionRegistrar.kt  DebugSignalDefaults.kt  WaitingForDebugger.kt
mobshield-detect-environment/: build.gradle.kts
mobshield-detect-environment/src/main/cpp/: CMakeLists.txt  cpu_features.cpp  emu_checks.h  emu_jni.cpp  qemu_devices.cpp  qemu_props.cpp
mobshield-detect-hooks/: build.gradle.kts
mobshield-detect-hooks/src/main/cpp/: CMakeLists.txt  art_inspection.cpp  frida_port_probe.cpp  function_prologue_inspect.cpp  hooks_checks.h  hooks_jni.cpp  mobshield_hooks_buildinfo.h  proc_maps_scan.cpp  prologue_crypto.h  thread_name_scan.cpp
mobshield-detect-hooks/src/test/resources/proc/: maps_clean.txt  maps_frida.txt
mobshield-detect-integrity/: build.gradle.kts  consumer-rules.pro
mobshield-detect-root/: build.gradle.kts
mobshield-detect-root/src/main/cpp/: CMakeLists.txt  errno_deviation.cpp  kernelsu_check.cpp  magisk_uds_probe.cpp  mount_namespace_check.cpp  overlayfs_check.cpp  root_checks.h  root_jni.cpp  system_property_read.cpp  zygisk_loader_scan.cpp
mobshield-gradle-plugin/: build.gradle.kts  settings.gradle.kts
mobshield-gradle-plugin/src/functionalTest/kotlin/io/mobshield/gradle/: MobShieldPluginFunctionalTest.kt
mobshield-gradle-plugin/src/functionalTest/resources/stub-android/: settings.gradle.kts
mobshield-gradle-plugin/src/functionalTest/resources/stub-android/app/: build.gradle.kts
mobshield-gradle-plugin/src/main/kotlin/io/mobshield/gradle/: BuildInfoGenerator.kt  GenerateMobShieldBuildInfoTask.kt  InfoMobShieldTask.kt  MobShieldExtension.kt  MobShieldPlugin.kt  VerifyMobShieldTask.kt
mobshield-gradle-plugin/src/test/kotlin/io/mobshield/gradle/: BuildInfoGeneratorTest.kt
mobshield-plugin/: build.gradle.kts
mobshield-plugin/src/main/kotlin/io/mobshield/gradle/: LegacyMobShieldPlugin.kt
mobshield-sample-app/: README.md  build.gradle.kts
mobshield-sample-app/src/main/: AndroidManifest.xml
mobshield-sample-app/src/main/java/io/mobshield/sampleapp/: MainActivity.kt  SampleApplication.kt
mobshield-sample-app/src/main/res/values/: strings.xml  themes.xml
mobshield/src/main/kotlin/io/mobshield/: MobShieldDetectors.kt  MobShieldSdk.kt
native/cmake/: MobShield16kPages.cmake
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/java/io/mobshield/sample/: MainActivity.kt
scripts/: generate-signals-json.sh  verify-aar-reproducibility.sh
(+74 files in other folders)
